# SimpleNotebook

./: .gitignore  CMakeLists.txt  MathConverter.cpp  MathConverter.h  README.md  SPEC.md  editorview.cpp  editorview.h  gitpanel.cpp  gitpanel.h  gitwindow.cpp  gitwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  setup-github.sh  startpage.cpp  startpage.h
